--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,8 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(to bottom right, #cbd5f4, #e9d5ff);
+  background-image: url('./assets/images/фон.png');
+  background-size: cover;
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -22,14 +23,14 @@ body {
 .uploader-title {
   font-size: 1.75rem;
   font-weight: 800;
-  color: #333;
+  color: black;
   margin-bottom: 1.5rem;
 }
 
 .upload-button {
-  background-color: #2563eb;
-  color: white;
-  font-weight: 600;
+  background-color: #E75B47B5;
+  color: black;
+  font-weight: bold;
   padding: 0.75rem 1.5rem;
   border-radius: 1rem;
   border: none;
@@ -42,12 +43,32 @@ body {
   background-color: #1e40af;
 }
 
+.output-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
 .preview-image {
-  margin-top: 1rem;
-  max-width: 100%;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  width: 100%;
+  min-width: 280px;
+  max-width: 700px;
+  max-height: 700px;
   border-radius: 1rem;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
   border: 1px solid #ddd;
+}
+
+.result-box {
+  border-radius: 2rem;
+  width: 100%;
+  min-width: 280px;
+  max-width: 700px;
+  border: 1px solid #000000;
+  text-align: left;
 }
 
 .drop-zone {
@@ -69,8 +90,10 @@ body {
   border-color: #3b82f6;
 }
 
-.upload-icon {
-  margin-bottom: 1rem;
+.upload-logo {
+  width: 80px;
+  height: auto;
+  margin-bottom: 16px;
 }
 
 /* Анимация загрузки */
